Add multi-language support

--- a/src/locales/ru/translations.json
+++ b/src/locales/ru/translations.json
@@ -1,7 +1,7 @@
 {
   "marker": "User location",
-  "geoDiscovery": "Error: Can\'t get user location. Please enable geo discovery in your browser",
-  "geoSupport": "Error: Browser doesn\'t support Geolocation",
+  "geoDiscovery": "Error: Can't get user location. Please enable geo discovery in your browser",
+  "geoSupport": "Error: Browser doesn't support Geolocation",
   "loginTitle": "Sign in!",
   "loginEmail": "Email:",
   "loginCheckbox": "Remember me",
