--- a/src/locales/de/translations.json
+++ b/src/locales/de/translations.json
@@ -1,8 +1,8 @@
 {
   "marker": "User location",
-  "geoDiscovery": "Error: Can\'t get user location. Please enable geo discovery in your browser",
-  "geoSupport": "Error: Browser doesn\'t support Geolocation",
-  "loginTitle": "Sign in",
+  "geoDiscovery": "Error: Can't get user location. Please enable geo discovery in your browser",
+  "geoSupport": "Error: Browser doesn't support Geolocation",
+  "loginTitle": "Sign in!",
   "loginEmail": "Email:",
   "loginCheckbox": "Remember me",
   "loginPassword": "Password:",
