--- a/src/locales/ru/translations.json
+++ b/src/locales/ru/translations.json
@@ -1,15 +1,15 @@
 {
-  "marker": "User location",
-  "geoDiscovery": "Error: Can't get user location. Please enable geo discovery in your browser",
-  "geoSupport": "Error: Browser doesn't support Geolocation",
-  "loginTitle": "Sign in!",
-  "loginEmail": "Email:",
-  "loginCheckbox": "Remember me",
-  "loginPassword": "Password:",
-  "loginButton": "Sign In",
-  "loginPasswordRecovery": "Forgot password?",
-  "recoverTitle": "Recover password",
-  "recoverEmail": "Email:",
-  "recoverText": "Enter your email and click sumbit. Password reset link will be send to your email.",
-  "recoverPassword": "Recover password"
+  "marker": "Местоположение пользователя",
+  "geoDiscovery": "Ошибка: невозможно получить местоположение пользователя. Пожалуйста, включите геообнаружение в вашем браузере",
+  "geoSupport": "Ошибка: браузер не поддерживает геолокацию",
+  "loginTitle": "Войти",
+  "loginEmail": "е-мейл:",
+  "loginCheckbox": "Запомнить меня",
+  "loginPassword": "Пароль:",
+  "loginButton": "Войти",
+  "loginPasswordRecovery": "Забыли пароль?",
+  "recoverTitle": "Восстановить пароль",
+  "recoverEmail": "е-мейл:",
+  "recoverText": "Введите свой адрес электронной почты и нажмите sumbit. Ссылка для сброса пароля будет отправлена на ваш адрес электронной почты.",
+  "recoverPassword": "Восстановить пароль"
 }
